# pixcompress

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
pixcompress/: __init__.py  cli.py  core.py
